[package]
name = "distributed-key-value-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raft = "0.7.0"
regex = "1.5.4"
slog = "2.7.0"
bincode = "1.3.3"
slog-term = "2.4.0"
slog-async = "2.3.0"
protobuf = "2.28.0"
actix-web = "4"
signal-hook = "0.3.17"
tokio = { version = "1.11.0", features = ["full"] }
signal-hook-tokio = "0.3.1"
env_logger = "0.10.0"
serde = { version = "1.0.130", features = ["derive"] }
log = "0.4.14"



